SDKs/twilio.com/twilio_studio_v1/1.37.4/typescript/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

### NPM

```bash
npm add openapi
```

### Yarn

```bash
yarn add openapi
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```typescript
import { SDK, withSecurity} from "openapi";
import { CreateEngagementRequest, CreateEngagementResponse } from "openapi/src/sdk/models/operations";
import { AxiosError } from "axios";


const sdk = new SDK();
    
const req: CreateEngagementRequest = {
  security: {
    accountSidAuthToken: {
      password: "YOUR_PASSWORD_HERE",
      username: "YOUR_USERNAME_HERE",
    },
  },
  pathParams: {
    flowSid: "sit",
  },
  request: {
    from: "voluptas",
    parameters: "culpa",
    to: "expedita",
  },
};

sdk.createEngagement(req).then((res: CreateEngagementResponse | AxiosError) => {
   // handle response
});
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `createEngagement` - Triggers a new Engagement for the Flow
* `createExecution` - Triggers a new Execution for the Flow
* `deleteEngagement` - Delete this Engagement and all Steps relating to it.
* `deleteExecution` - Delete the Execution and all Steps relating to it.
* `deleteFlow` - Delete a specific Flow.
* `fetchEngagement` - Retrieve an Engagement
* `fetchEngagementContext` - Retrieve the most recent context for an Engagement.
* `fetchExecution` - Retrieve an Execution
* `fetchExecutionContext` - Retrieve the most recent context for an Execution.
* `fetchExecutionStep` - Retrieve a Step.
* `fetchExecutionStepContext` - Retrieve the context for an Execution Step.
* `fetchFlow` - Retrieve a specific Flow.
* `fetchStep` - Retrieve a Step.
* `fetchStepContext` - Retrieve the context for an Engagement Step.
* `listEngagement` - Retrieve a list of all Engagements for the Flow.
* `listExecution` - Retrieve a list of all Executions for the Flow.
* `listExecutionStep` - Retrieve a list of all Steps for an Execution.
* `listFlow` - Retrieve a list of all Flows.
* `listStep` - Retrieve a list of all Steps for an Engagement.
* `updateExecution` - Update the status of an Execution to `ended`.

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
